[package]
name = "rp2040-zero-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
waveshare-rp2040-zero = "0.8.0"
embedded-hal = "1.0.0"
cortex-m-rt = "0.7.3"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.10.0"
panic-halt= "0.2.0"
ws2812-pio = "0.8.0"
smart-leds = "0.3.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
